--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,17 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              // "src/favicon.ico",
+              "src/favicon.png",
+              "src/assets",
+              {
+                "glob": "_redirects",
+                "input": "src",
+                "output": "/"
+              },
+              "src/service-worker.js"
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/my-theme.scss", "src/styles.css"],
             "scripts": []
           },
           "configurations": {
@@ -83,13 +88,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["my-theme.scss", "src/styles.css"],
             "scripts": []
           }
         },
@@ -101,9 +101,7 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         },
         "e2e": {
@@ -119,6 +117,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "pwagram"
 }
