--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,6 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              // "src/favicon.ico",
               "src/favicon.png",
               "src/assets",
               {
@@ -28,7 +27,7 @@
                 "input": "src",
                 "output": "/"
               },
-              "src/service-worker.js"
+              "src/manifest.webmanifest"
             ],
             "styles": ["src/my-theme.scss", "src/styles.css"],
             "scripts": []
@@ -60,7 +59,9 @@
                   "maximumWarning": "6kb",
                   "maximumError": "10kb"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "ngsw-config.json"
             }
           }
         },
@@ -88,7 +89,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
             "styles": ["my-theme.scss", "src/styles.css"],
             "scripts": []
           }
